@@ -110,7 +110,7 @@
     RewriteEngine on
 ############################################
 ## always send 404 on missing files in these folders
-    RewriteCond %{REQUEST_URI} !^/(public)/
+    RewriteCond %{REQUEST_URI} !^/(skin)/
 </IfModule>
 ##################### Public ##########################
 RewriteRule ^(fr|en|nl){1,3}/{0,1}$     														/index.php?strLangue=$1 							[QSA,L]
@@ -137,5 +137,5 @@ RewriteRule ^(fr|en|nl){1,3}[/](catalogue|catalog)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+
 RewriteRule ^(catalogue|catalog)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+).html/{0,1}$     	/index.php?catalog&pathclibelle&idclc=$3&pathslibelle&idcls=$5&urlcatalog&idcatalog=$7		[QSA,L]
 RewriteRule ^(fr|en|nl){1,3}[/](catalogue|catalog)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+)[/]([-_0-9a-zA-Z]+)[-]([/0-9]+).html/{0,1}$     	/index.php?strLangue=$1&catalog&pathclibelle&idclc=$4&pathslibelle&idcls=$6&urlcatalog&idcatalog=$8		[QSA,L]
 ############################ Plugins ###############################
-RewriteRule ^contact/(produit|product)/renseignement.html/{0,1}$     							/plugins.php?contact=$1							[QSA,L]
-RewriteRule ^(fr|en|nl){1,3}[/]contact/(produit|product)/renseignement.html/{0,1}$     			/plugins.php?strLangue=$1&contact=$2			[QSA,L]
+RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)/{0,1}$     						/plugins.php?magixmod=$1								[QSA,L]
+RewriteRule ^(fr|en|nl){1,3}[/]magixmod[/]([-_0-9a-zA-Z]+)/{0,1}$     		/plugins.php?strLangue=$1&magixmod=$2					[QSA,L]
