@@ -3,7 +3,7 @@
 	{include file="common/footer.phtml"}
 </div>
 {include file="common/javascript.phtml"}
-{include file="$pluginName/js.phtml"}
+{include file="js.phtml"}
 <script type="text/javascript" src="/min/?g=editor"></script>
 </body>
 </html>
