@@ -23,19 +23,15 @@ if (!file_exists($loaderFilename)) {
  * Autoload Frontend
  */
 frontend_Autoloader::register();
-plugins_Autoloader::register();
 session_name('lang');
 ini_set('session.hash_function',1);
 session_start();
 $lang = new frontend_model_IniLang();
 $lang->autoLangSession();
-if(isset($_GET['static'])){
-	$plugin = new frontend_plugins_promotions();
-	$plugin->display();
-}elseif(isset($_GET['contact'])){
-	$contact = new plugins_contact_public();
-	$contact->display();
-}/*elseif(isset($_GET['mix'])){
+if(frontend_controller_plugins::getplugin()){
+	frontend_controller_plugins::display_plugins();
+}
+/*elseif(isset($_GET['mix'])){
 	$gp = new frontend_plugins_gpageRegional();
 	$gp->display();
 }*/
